--- a/.github/workflows/continuousdeployment.yml
+++ b/.github/workflows/continuousdeployment.yml
@@ -3,8 +3,7 @@ name: Continuous Deployment with Github Actions
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+
 
 jobs:
 
@@ -14,5 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_ACESS_TOKEN }}
+
