--- a/.github/workflows/continuousdeployment.yml
+++ b/.github/workflows/continuousdeployment.yml
@@ -20,3 +20,13 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_ACESS_TOKEN }}
 
+    - name: Setup java 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'adopt'
+
+    - name: Build Product Service
+      working-directory: ./ecomerce/ecomerce/product-service
+      run: mvn spring-boot:build-image -DskipTests
+
